--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -11,7 +12,7 @@
           src="./images/logo-rocketseat.svg"
           alt="Rocketseat"
         />
-        <div class="menu-section">
+        <div class="menu-section on">
           <div class="menu-toggle">
             <div class="one"></div>
             <div class="two"></div>
