--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           src="./images/logo-rocketseat.svg"
           alt="Rocketseat"
         />
-        <div class="menu-section on">
+        <div class="menu-section">
           <div class="menu-toggle">
             <div class="one"></div>
             <div class="two"></div>
@@ -136,5 +136,6 @@
     </div>
 
     <script src="scripts.js"></script>
+    <script src="menu.js"></script>
   </body>
 </html>
